Fixed radar on non-mobile, and reduce radar on mobile to 100vw

--- a/src/App.css
+++ b/src/App.css
@@ -6,7 +6,10 @@
 
 @media only screen and (max-width: 600px) {
   .radar {
-    width: 120vw;
-    height: 500px;
+    width: 100vw;
+    height: 100vw;
+  }
+  .fixed {
+    position: relative;
   }
 }
